03-kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-tutorial
  labels:
    app: infra-tutorial
