03-kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: infra-tutorial
  labels:
    app: infra-tutorial
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: infra-tutorial
